Bug 401856 - Apps sorting order isn't remembered after Discover restart
Summary: Apps sorting order isn't remembered after Discover restart
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.14.4
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: usability
: 402573 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-12-07 11:47 UTC by Alexander Mentyu
Modified: 2018-12-26 22:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-12-07 11:47:56 UTC
STEPS TO REPRODUCE
1. Open Discover.
2. Select top left applications/addons pages - 'Rating' is default sorting order - selected from top right 'Sort' dropdown or select bottom left 'Installed' page - 'Name' is default sorting order.
3. Select any other sorting order.
4. Close Discover.
5. Open Discover.
6. Select top left applications/addons pages -  or select bottom left 'Installed' page.

OBSERVED RESULT
Previously selected order on these pages isn't remembered and default one is selected

EXPECTED RESULT
Previously selected order on these pages is remembered and selected

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-42-generic
Comment 1 Nate Graham 2018-12-08 04:31:54 UTC
Confirmed.
Comment 2 Aleix Pol 2018-12-11 00:43:23 UTC
Git commit 4b9bdde405a70140d494266647bdf0f0001dade0 by Aleix Pol.
Committed on 11/12/2018 at 00:41.
Pushed by apol into branch 'master'.

Save last used sort order

Separately for installed page and the rest

M  +1    -0    discover/CMakeLists.txt
M  +8    -0    discover/DiscoverObject.cpp
A  +8    -0    discover/discoversettings.kcfg
A  +5    -0    discover/discoversettings.kcfgc
M  +11   -6    discover/qml/ApplicationsListPage.qml
M  +1    -1    discover/qml/InstalledPage.qml

https://commits.kde.org/discover/4b9bdde405a70140d494266647bdf0f0001dade0
Comment 3 Nate Graham 2018-12-26 22:41:42 UTC
*** Bug 402573 has been marked as a duplicate of this bug. ***