Save last used sort order

Separately for installed page and the rest

BUG: 401856